tests/src/snapshots/pluma_tests__parse_success__type_assertion_complex.snap
---
source: tests/src/parse_success.rs
expression: "f :: { Int -> { () -> (Bool, Int) } }"
---

=== Source ===
f :: { Int -> { () -> (Bool, Int) } }

=== Tokens ===
[
    Identifier(
        0,
        1,
    ),
    DoubleColon(
        2,
        4,
    ),
    LeftBrace(
        5,
        6,
    ),
    Identifier(
        7,
        10,
    ),
    Arrow(
        11,
        13,
    ),
    LeftBrace(
        14,
        15,
    ),
    LeftParen(
        16,
        17,
    ),
    RightParen(
        17,
        18,
    ),
    Arrow(
        19,
        21,
    ),
    LeftParen(
        22,
        23,
    ),
    Identifier(
        23,
        27,
    ),
    Comma(
        27,
        28,
    ),
    Identifier(
        29,
        32,
    ),
    RightParen(
        32,
        33,
    ),
    RightBrace(
        34,
        35,
    ),
    RightBrace(
        36,
        37,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        37,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                37,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        37,
                    ),
                    kind: TypeAssertion {
                        expr: ExprNode {
                            pos: (
                                0,
                                1,
                            ),
                            kind: Identifier(
                                IdentifierNode {
                                    pos: (
                                        0,
                                        1,
                                    ),
                                    name: "f",
                                },
                            ),
                            typ: Unknown,
                        },
                        asserted_type: TypeExprNode {
                            pos: (
                                5,
                                37,
                            ),
                            kind: Func(
                                TypeExprNode {
                                    pos: (
                                        7,
                                        10,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                7,
                                                10,
                                            ),
                                            name: "Int",
                                            generics: [],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                TypeExprNode {
                                    pos: (
                                        14,
                                        35,
                                    ),
                                    kind: Func(
                                        TypeExprNode {
                                            pos: (
                                                16,
                                                18,
                                            ),
                                            kind: EmptyTuple,
                                            typ: Unknown,
                                        },
                                        TypeExprNode {
                                            pos: (
                                                22,
                                                33,
                                            ),
                                            kind: Tuple(
                                                [
                                                    TypeExprNode {
                                                        pos: (
                                                            23,
                                                            27,
                                                        ),
                                                        kind: Single(
                                                            TypeIdentifierNode {
                                                                pos: (
                                                                    23,
                                                                    27,
                                                                ),
                                                                name: "Bool",
                                                                generics: [],
                                                            },
                                                        ),
                                                        typ: Unknown,
                                                    },
                                                    TypeExprNode {
                                                        pos: (
                                                            29,
                                                            32,
                                                        ),
                                                        kind: Single(
                                                            TypeIdentifierNode {
                                                                pos: (
                                                                    29,
                                                                    32,
                                                                ),
                                                                name: "Int",
                                                                generics: [],
                                                            },
                                                        ),
                                                        typ: Unknown,
                                                    },
                                                ],
                                            ),
                                            typ: Unknown,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                            typ: Unknown,
                        },
                    },
                    typ: Unknown,
                },
            ),
        },
    ],
}

