tests/src/snapshots/pluma_tests__parse_success__type_enum_across_lines.snap
---
source: tests/src/parse_success.rs
expression: "enum Color\n  | Red\n  | Green\n  | Blue"
---

=== Source ===
enum Color
  | Red
  | Green
  | Blue

=== Tokens ===
[
    KeywordEnum(
        0,
        4,
    ),
    Identifier(
        5,
        10,
    ),
    LineBreak(
        10,
        11,
    ),
    Pipe(
        13,
        14,
    ),
    Identifier(
        15,
        18,
    ),
    LineBreak(
        18,
        19,
    ),
    Pipe(
        21,
        22,
    ),
    Identifier(
        23,
        28,
    ),
    LineBreak(
        28,
        29,
    ),
    Pipe(
        31,
        32,
    ),
    Identifier(
        33,
        37,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        37,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                37,
            ),
            kind: TypeDef(
                TypeDefNode {
                    pos: (
                        0,
                        37,
                    ),
                    kind: Enum {
                        variants: [
                            EnumVariantNode {
                                pos: (
                                    15,
                                    18,
                                ),
                                kind: Identifier(
                                    IdentifierNode {
                                        pos: (
                                            15,
                                            18,
                                        ),
                                        name: "Red",
                                        typ: None,
                                    },
                                ),
                            },
                            EnumVariantNode {
                                pos: (
                                    23,
                                    28,
                                ),
                                kind: Identifier(
                                    IdentifierNode {
                                        pos: (
                                            23,
                                            28,
                                        ),
                                        name: "Green",
                                        typ: None,
                                    },
                                ),
                            },
                            EnumVariantNode {
                                pos: (
                                    33,
                                    37,
                                ),
                                kind: Identifier(
                                    IdentifierNode {
                                        pos: (
                                            33,
                                            37,
                                        ),
                                        name: "Blue",
                                        typ: None,
                                    },
                                ),
                            },
                        ],
                    },
                    name: TypeIdentifierNode {
                        pos: (
                            5,
                            10,
                        ),
                        name: IdentifierNode {
                            pos: (
                                5,
                                10,
                            ),
                            name: "Color",
                            typ: None,
                        },
                        generics: [],
                    },
                    generic_type_constraints: [],
                },
            ),
        },
    ],
}

